--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="mainContentBlock">
             <div id="mainContent">
                 
-                <div id="avatarImage" style="background-image: url('images/avatar.png');">
+                <div id="avatarImage" style="background-image: url('avatar1.png');">
                 </div>
                 
                 <div id="introBox">
