--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
                 
                 <div id="fullBioBox">
-                    <p>SOCRadar Digital Risk Protection Platform&#x2122;</p>
-<p>SOCRadar delivers intelligent digital risk protection platform for organizations against sophisticated cyber attacks. Its portfolio of digital assets and perimeter monitoring platforms hardened with targeted cyber threat intelligence &#x2013; all automated and supported by a global team of qualified intelligence analysts &#x2013; provides unparalleled visibility, management, and protection of digital risks.</p>
+                    <p>SOCRadar Attack Surface Management Platform</p>
+<p>SOCRadar delivers an intelligent extended threat intelligence platform for organizations against sophisticated cyber attacks. Its portfolio of digital assets and perimeter monitoring platforms hardened with targeted cyber threat intelligence &#x2013; all automated and supported by a global team of qualified intelligence analysts &#x2013; provides unparalleled visibility, management, and protection of digital risks.</p>
 <p>Prioritized, up-to-date, and relevant cyber threat intelligence insights empower customers to take action starting from the reconnaissance stage of the Cyber Kill Chain. Our customers worldwide leverage our 15+ years of expertise and investment in scalable, innovative solutions to protect their most valuable assets &#x2013; brand reputation, employees, customers, networks, and operational facilities.</p>
 <p>SOCRadar discovers all digital assets of the companies automatically and tracks changes of those 7x24x365 with flexible alarm and notification mechanism. SOCRadar false-positive alarm ration is redacted with machine learning algorithms and provides cyber threat intelligence. </p>
 <p>SOCRadar TCHELEBI Wide Scan project is a subproject inside of our platform. We are constantly looking for open ports and banners of our customers&#x27; external ip addresses to generate alarms for any potential misconfiguration. </p>
 <p>Our carefully designed system send TCP SYN packets in a very low rate (lower than 0.1 Mbps) and scans are distributed and randomized over the time to prevent any load on the destination ip addresses.</p>
 <p>Q: How to be excluded from our scans?</p>
-<p>A: Send an email to noscan [@] socradar[.]com requesting to be excluded and including your information.</p>
+<p>A: Send an email to noscan [@] socradar[.]io requesting to be excluded and including your information.</p>
 <p>Q: How to block our scanners?</p>
-<p>A: A list of our scanners&#x27; IP addresses are:</p>
+<p>A: A list of our Port scanners; IP addresses are:</p>
 <ul>
 <li>139.162.225.221</li>
 <li>139.162.225.221</li>
@@ -39,6 +39,9 @@
 <li>172.105.58.98</li>
 <li>45.79.173.230</li>
 <li>172.105.78.101</li>
+</ul>   
+<p>A list of our Network Vulnerability scanners' IP addresses are:</p>     
+<ul>
     <li>185.198.199.82</li>
     <li>185.198.199.83</li>
 </ul>
