--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SOCRADAR TCHELEBI WIDE SCAN PROJECT</title>
+    <title>SOCRADAR CURIOSITY WIDE SCAN PROJECT</title>
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/minimalism-dark.css?g=1575558654742">
 </head>
@@ -15,7 +15,7 @@
                 </div>
                 
                 <div id="introBox">
-                    <h1>SOCRADAR TCHELEBI WIDE SCAN PROJECT</h1>
+                    <h1>SOCRADAR CURIOSITY WIDE SCAN PROJECT</h1>
                 </div>
 
                 
@@ -24,7 +24,7 @@
 <p>SOCRadar delivers an intelligent extended threat intelligence platform for organizations against sophisticated cyber attacks. Its portfolio of digital assets and perimeter monitoring platforms hardened with targeted cyber threat intelligence &#x2013; all automated and supported by a global team of qualified intelligence analysts &#x2013; provides unparalleled visibility, management, and protection of digital risks.</p>
 <p>Prioritized, up-to-date, and relevant cyber threat intelligence insights empower customers to take action starting from the reconnaissance stage of the Cyber Kill Chain. Our customers worldwide leverage our 15+ years of expertise and investment in scalable, innovative solutions to protect their most valuable assets &#x2013; brand reputation, employees, customers, networks, and operational facilities.</p>
 <p>SOCRadar discovers all digital assets of the companies automatically and tracks changes of those 7x24x365 with flexible alarm and notification mechanism. SOCRadar false-positive alarm ration is redacted with machine learning algorithms and provides cyber threat intelligence. </p>
-<p>SOCRadar TCHELEBI Wide Scan project is a subproject inside of our platform. We are constantly looking for open ports and banners of our customers&#x27; external ip addresses to generate alarms for any potential misconfiguration. </p>
+<p>SOCRadar CURIOSITY Wide Scan project is a subproject inside of our platform. We are constantly looking for open ports and banners of our customers&#x27; external ip addresses to generate alarms for any potential misconfiguration. </p>
 <p>Our carefully designed system send TCP SYN packets in a very low rate (lower than 0.1 Mbps) and scans are distributed and randomized over the time to prevent any load on the destination ip addresses.</p>
 <p>Q: How to be excluded from our scans?</p>
 <p>A: Send an email to noscan [@] socradar[.]io requesting to be excluded and including your information.</p>
@@ -51,7 +51,7 @@
         </div>
         <footer>
             <div class="footer">
-                <p>&copy; SOCRADAR TCHELEBI WIDE SCAN PROJECT
+                <p>&copy; SOCRADAR CURIOSITY WIDE SCAN PROJECT
                 </p>
             </div>
         </footer>
